service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: rkumar-namespace
  name: rkumar-service
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
  selector:
    app: rkumar-service
